--- a/src/assets/scss/partials/_new-catalog.scss
+++ b/src/assets/scss/partials/_new-catalog.scss
@@ -68,17 +68,64 @@
     width: calc(100% + 40px);
     position: relative;
     left: -20px;
+
+    &-slide {
+      width: auto;
+      display: flex;
+    }
   }
 }
 
 .new-catalog {
+  &__block {
+    padding: 15px 10px;
+    overflow: hidden;
+  }
+
   &__header {
     justify-content: flex-start;
     gap: 20px;
+
+    @include mobile {
+      width: 100%;
+      justify-content: space-between;
+    }
   }
 
   &__arrows {
     margin-left: auto;
+
+    @include mobile {
+      display: flex;
+      align-items: center;
+      gap: 3px;
+      margin-left: initial;
+    }
+  }
+
+  &__btn {
+    height: 48px;
+    padding: 5px 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+
+    @include mobile {
+      width: 37px;
+      height: 37px;
+      padding: 0;
+    }
+
+    &-icon {
+      height: 17px;
+    }
+
+    &-text {
+      @include mobile {
+        display: none;
+      }
+    }
   }
 
   &__search {
@@ -86,63 +133,33 @@
     align-items: center;
     gap: 8px;
     width: 50%;
-  }
 
-  &__btn {
-    height: 48px;
-    padding: 5px 25px;
+    @include mobile {
+      width: auto;
+      gap: 4px;
+    }
+
+    &-block {
+      @include mobile {
+        display: none;
+      }
+    }
+    &-btn {
+      padding: 5px;
+      margin-left: 4px;
+
+      &-img {
+        height: 17px;
+      }
+
+      @include mobile {
+        display: flex;
+      }
+    }
   }
 
   &__input {
     max-width: 360px;
     height: 48px;
-  }
-}
-
-.new-block {
-  &__title {
-    display: flex;
-    align-items: flex-start;
-    gap: 15px;
-    font-family: $font-roboto;
-
-    &_icon {
-      width: auto;
-      height: 24px;
-      object-fit: contain;
-      margin-top: 8px;
-    }
-
-    &_text {
-      font-size: 30px;
-      color: #c3b8a2;
-      font-weight: 500;
-      line-height: 1.3;
-
-      &:hover {
-        color: #ff5500;
-      }
-    }
-  }
-}
-
-.new-arrow-left,
-.new-arrow-right {
-  background: #22211e;
-  border-radius: 8px;
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  padding: 5px;
-  width: 47px;
-  height: 47px;
-  transition: none;
-
-  &:hover {
-    background: #ebe2d0;
-
-    svg path {
-      fill: #22211e;
-    }
   }
 }
