--- a/src/partials/new-index/new-catalog.html
+++ b/src/partials/new-index/new-catalog.html
@@ -8,12 +8,52 @@
                     <a href="#" class="new-block__title_text">Каталог игр</a>
                 </div>
                 <div class="new-catalog__search">
-                    <div class="new-search-block">
+
+                    <div class="new-catalog__search-block new-search-block">
                         <img class="new-search-block__img" src="assets/images/new-icons/search.svg" alt="">
-                        <input placeholder="Найти" type="text" class="new-search-block__input new-search-block__input--normal">
+                        <input placeholder="Найти" type="text"
+                            class="new-search-block__input new-search-block__input--normal">
                     </div>
-                    <button class="new-catalog__btn new-btn new-btn--white">Ключами</button>
-                    <button class="new-catalog__btn new-btn">Гифтами</button>
+                    <button class="new-catalog__btn new-btn new-btn--white">
+                        <svg class="new-catalog__btn-icon" width="19" height="17" viewBox="0 0 19 17" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path
+                                d="M10.8582 6.77891C11.304 4.7102 10.366 2.56128 8.34475 1.49033C5.77751 0.13011 2.44826 1.02218 0.90508 3.48379C-0.6381 5.94539 0.19134 9.0409 2.75858 10.4011C4.77984 11.4721 7.2726 11.1408 8.99614 9.7492L12.3649 11.5341L10.5029 14.5044L13.6006 16.1456L15.4626 13.1754L17.0115 13.9961L18.8736 11.0258L10.8582 6.77891ZM4.62065 7.43084C3.76491 6.97744 3.4884 5.9456 4.00281 5.12504C4.51722 4.30448 5.62696 4.00719 6.4827 4.46059C7.33843 4.91399 7.61494 5.94583 7.10053 6.76639C6.58613 7.58694 5.47638 7.88424 4.62065 7.43084Z"
+                                fill="#161513" />
+                        </svg>
+                        <span class="new-catalog__btn-text">Ключами</span>
+                    </button>
+                    <button class="new-catalog__btn new-btn">
+                        <svg class="new-catalog__btn-icon" width="17" height="17" viewBox="0 0 17 17" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <g clip-path="url(#clip0_457_16487)">
+                                <path
+                                    d="M8.70388 5.05447H8.50121C8.40577 5.05058 8.31253 5.02456 8.22887 4.97844C8.1452 4.93233 8.07341 4.8674 8.01916 4.78877C7.96491 4.71014 7.92968 4.61998 7.91626 4.5254C7.90285 4.43081 7.91161 4.33441 7.94185 4.2438C8.22559 3.53041 8.485 2.8008 8.69578 2.08741C8.87412 1.53616 9.5713 -0.190571 11.3223 -0.190571C12.0048 -0.212439 12.668 0.0373246 13.1665 0.50391C13.665 0.970496 13.9581 1.61579 13.9813 2.29819C13.9813 3.86278 12.206 4.50321 11.5493 4.7302C10.621 4.97245 9.66293 5.08163 8.70388 5.05447ZM11.3142 1.00111C10.382 1.00111 9.96042 2.07931 9.85503 2.41168C9.70911 2.88187 9.55509 3.35206 9.38485 3.82225C9.96603 3.81855 10.5441 3.73675 11.1035 3.57905C11.5655 3.41691 12.7248 2.97915 12.7248 2.27387C12.6998 1.92052 12.539 1.59057 12.276 1.35327C12.013 1.11597 11.6683 0.989753 11.3142 1.00111Z"
+                                    fill="#EBE2D0" />
+                                <path
+                                    d="M8.27902 5.05422C7.34082 5.07074 6.40491 4.95614 5.49842 4.71374C3.47985 4.05709 3.06641 3.02754 3.06641 2.28173C3.0698 1.96671 3.1369 1.65565 3.26368 1.36725C3.39046 1.07886 3.5743 0.81911 3.80412 0.603639C4.31516 0.0895289 5.00863 -0.201846 5.73351 -0.207031C7.09544 -0.207031 7.78451 1.06572 8.29523 1.97367C8.62713 2.71798 8.89823 3.48792 9.1059 4.27597C9.13101 4.3654 9.1353 4.45939 9.11844 4.55074C9.10157 4.64208 9.06401 4.72834 9.00862 4.80291C8.95492 4.87821 8.88454 4.94007 8.80298 4.98367C8.72141 5.02726 8.63087 5.05141 8.53843 5.05422H8.27902ZM5.64434 1.00087C5.25937 1.01745 4.89595 1.18317 4.631 1.46295C4.51544 1.56485 4.42201 1.68936 4.35648 1.8288C4.29094 1.96823 4.2547 2.11962 4.24998 2.27362C4.24998 2.76813 4.84988 3.24642 5.87133 3.5788C6.46735 3.73286 7.07977 3.81451 7.69533 3.822C7.56421 3.39028 7.40442 2.96779 7.21704 2.55735L7.69533 2.26551L7.1684 2.55735C6.69821 1.65751 6.29287 1.01708 5.66866 1.00087H5.64434Z"
+                                    fill="#EBE2D0" />
+                                <path
+                                    d="M16.0013 7.08106V6.06772C16.0013 5.47646 15.7664 4.90942 15.3483 4.49134C14.9303 4.07326 14.3632 3.83838 13.772 3.83838H3.23325C2.64199 3.83838 2.07495 4.07326 1.65687 4.49134C1.23878 4.90942 1.00391 5.47646 1.00391 6.06772V7.08106H16.0013Z"
+                                    fill="#EBE2D0" />
+                                <path
+                                    d="M9.10938 8.29639V17.2138H13.7707C14.362 17.2138 14.929 16.9789 15.3471 16.5608C15.7652 16.1427 16.0001 15.5757 16.0001 14.9844V8.29639H9.10938Z"
+                                    fill="#EBE2D0" />
+                                <path
+                                    d="M7.8946 8.29639H1.00391V14.9844C1.00391 15.5757 1.23878 16.1427 1.65687 16.5608C2.07495 16.9789 2.64199 17.2138 3.23325 17.2138H7.8946V8.29639Z"
+                                    fill="#EBE2D0" />
+                            </g>
+                            <defs>
+                                <clipPath id="clip0_457_16487">
+                                    <rect width="17" height="17" fill="white" />
+                                </clipPath>
+                            </defs>
+                        </svg>
+                        <span class="new-catalog__btn-text">Гифтами</span>
+                    </button>
+                    <button class="new-catalog__search-btn new-catalog__btn new-btn">
+                        <img class="new-catalog__search-btn-img" src="assets/images/new-icons/search.svg" alt="">
+                    </button>
                 </div>
                 <div class="new-catalog__arrows">
                     <button type="button" class="new-arrow-left">
