--- a/src/partials/new-index/new-header.html
+++ b/src/partials/new-index/new-header.html
@@ -10,72 +10,80 @@
                                 class="new-header__logo-text--active">Bis</span></span>
                     </a>
 
-                    <div class="new-header__search">
-                        <button type="button" class="new-btn new-header__search-mobile">
-                            <img class="new-header__search-mobile-img" src="assets/images/new-icons/search.svg" alt="">
-                        </button>
-                        <div class="new-search-block">
-                            <img class="new-search-block__img" src="assets/images/new-icons/search.svg" alt="">
-                            <input placeholder="Найти" type="text"
-                                class="new-search-block__input new-search-block__input--bordered">
+                    <div class="new-header__top-actions">
+                        <div class="new-header__search">
+                            <button type="button" class="new-btn new-header__search-mobile">
+                                <img class="new-header__search-mobile-img" src="assets/images/new-icons/search.svg"
+                                    alt="">
+                            </button>
+                            <div class="new-search-block new-header__top-search">
+                                <img class="new-search-block__img" src="assets/images/new-icons/search.svg" alt="">
+                                <input placeholder="Найти" type="text"
+                                    class="new-search-block__input new-search-block__input--bordered">
+                            </div>
                         </div>
+
+                        <a href="#" class="new-header__notification new-btn">
+                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_457_14584)">
+                                    <path
+                                        d="M7.99751 16C8.38328 16 8.75325 15.8467 9.02603 15.5739C9.29881 15.3011 9.45206 14.9312 9.45206 14.5454H6.54297C6.54297 14.9312 6.69622 15.3011 6.96899 15.5739C7.24177 15.8467 7.61174 16 7.99751 16Z"
+                                        fill="#EBE2D0" />
+                                    <path
+                                        d="M14.4886 12.6422C14.5436 12.5092 14.558 12.363 14.5299 12.2219C14.5019 12.0808 14.4325 11.9511 14.3308 11.8494L13.0893 10.608V6.54545C13.0879 5.32229 12.6461 4.14053 11.8448 3.21638C11.0435 2.29223 9.9363 1.68746 8.72569 1.51273V0.727272C8.72569 0.534387 8.64907 0.349403 8.51268 0.213013C8.37629 0.076623 8.1913 0 7.99842 0C7.80553 0 7.62055 0.076623 7.48416 0.213013C7.34777 0.349403 7.27114 0.534387 7.27114 0.727272V1.51273C6.06053 1.68746 4.9533 2.29223 4.15201 3.21638C3.35072 4.14053 2.90895 5.32229 2.90751 6.54545V10.608L1.66606 11.8494C1.56438 11.9511 1.49514 12.0807 1.46709 12.2218C1.43904 12.3628 1.45344 12.509 1.50848 12.6419C1.56351 12.7748 1.6567 12.8884 1.77627 12.9683C1.89584 13.0482 2.03642 13.0909 2.18024 13.0909H13.8166C13.9604 13.0909 14.101 13.0483 14.2206 12.9684C14.3403 12.8886 14.4335 12.775 14.4886 12.6422ZM3.93588 11.6363L4.14897 11.4233C4.28537 11.2869 4.36202 11.1019 4.36206 10.9091V6.54545C4.36206 5.58102 4.74517 4.6561 5.42712 3.97415C6.10907 3.2922 7.03399 2.90909 7.99842 2.90909C8.96284 2.90909 9.88776 3.2922 10.5697 3.97415C11.2517 4.6561 11.6348 5.58102 11.6348 6.54545V10.9091C11.6348 11.1019 11.7115 11.2869 11.8479 11.4233L12.061 11.6363H3.93588Z"
+                                        fill="#EBE2D0" />
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_457_14584">
+                                        <rect width="16" height="16" fill="white" />
+                                    </clipPath>
+                                </defs>
+                            </svg>
+
+                        </a>
+
+                        <a href="#" class="new-header__basket new-btn">
+                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_457_14577)">
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M7.99015 -0.09375C6.37708 -0.09375 5.06941 1.21391 5.06941 2.82698V3.41113H3.77851C2.88556 3.41113 2.13539 4.08255 2.03678 4.97005L1.12811 13.1481C1.01277 14.1862 1.82536 15.0941 2.86984 15.0941H9.74259C10.0652 15.0941 10.3267 14.8325 10.3267 14.5099C10.3267 14.1873 10.0652 13.9258 9.74259 13.9258H2.86984C2.52168 13.9258 2.25081 13.6231 2.28926 13.2771L3.19793 5.09908C3.2308 4.80321 3.48085 4.57943 3.77851 4.57943H5.06941V5.74772C5.06941 6.07034 5.33094 6.33187 5.65356 6.33187C5.97618 6.33187 6.23771 6.07034 6.23771 5.74772V4.57943H9.74259V5.74772C9.74259 6.07034 10.0041 6.33187 10.3267 6.33187C10.6494 6.33187 10.9109 6.07034 10.9109 5.74772V4.57943H12.2018C12.4995 4.57943 12.7495 4.80321 12.7824 5.09908L13.251 9.31709C13.2867 9.63773 13.5755 9.86882 13.8962 9.83319C14.2168 9.79755 14.4478 9.50875 14.4122 9.18811L13.9435 4.97005C13.8449 4.08256 13.0948 3.41113 12.2018 3.41113H10.9109V2.82698C10.9109 1.21391 9.60321 -0.09375 7.99015 -0.09375ZM9.74259 3.41113V2.82698C9.74259 1.85914 8.95802 1.07454 7.99015 1.07454C7.02233 1.07454 6.23771 1.85914 6.23771 2.82698V3.41113H9.74259Z"
+                                        fill="#EBE2D0" />
+                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                        d="M13.2489 11.005C13.2489 10.6824 12.9873 10.4209 12.6647 10.4209C12.3421 10.4209 12.0806 10.6824 12.0806 11.005V12.1733H10.9123C10.5896 12.1733 10.3281 12.4349 10.3281 12.7575C10.3281 13.0801 10.5896 13.3416 10.9123 13.3416H12.0806V14.5099C12.0806 14.8326 12.3421 15.0941 12.6647 15.0941C12.9873 15.0941 13.2489 14.8326 13.2489 14.5099V13.3416H14.4172C14.7398 13.3416 15.0013 13.0801 15.0013 12.7575C15.0013 12.4349 14.7398 12.1733 14.4172 12.1733H13.2489V11.005Z"
+                                        fill="#EBE2D0" />
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_457_14577">
+                                        <rect width="16" height="16" fill="white" />
+                                    </clipPath>
+                                </defs>
+                            </svg>
+                        </a>
+
+                        <a href="#" class="new-header__admin new-btn">
+                            <svg width="28" height="28" viewBox="0 0 28 28" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <g clip-path="url(#clip0_905_28920)">
+                                    <path
+                                        d="M27.5333 9.8H26.1333V6.53335C26.1325 6.27594 25.9241 6.06741 25.6667 6.0667H24.2666V4.2C24.2666 3.94226 24.0577 3.73335 23.8 3.73335H22.4V2.33335C22.3992 2.07594 22.1908 1.86741 21.9334 1.8667H20.0667V0.466703C20.0659 0.209234 19.8574 0.000765625 19.5999 0H7.9333C7.67588 0.000765625 7.46736 0.209234 7.46665 0.466648V1.86665H6.06665C5.80923 1.86741 5.60071 2.07588 5.6 2.3333V3.7333H4.19995C3.9422 3.7333 3.7333 3.9422 3.7333 4.19995V5.59995H2.3333C2.07588 5.60071 1.86736 5.80918 1.86665 6.06659V9.8H0.466648C0.209234 9.80077 0.000710938 10.0092 0 10.2666V25.6666C0.000765625 25.9241 0.209234 26.1326 0.466648 26.1333H1.86665V27.5333C1.86741 27.7907 2.07588 27.9992 2.3333 27.9999H6.06665C6.32406 27.9992 6.53259 27.7907 6.5333 27.5333V26.1333H8.39995C8.65736 26.1325 8.86588 25.9241 8.86659 25.6666V24.2666H9.79995V25.6666C9.80071 25.9241 10.0092 26.1326 10.2666 26.1333H11.6666V27.5491C11.6666 27.6692 11.7145 27.7844 11.7998 27.869C11.885 27.9537 12.0005 28.0008 12.1206 28H15.8793C15.9994 28.0008 16.1149 27.9537 16.2001 27.869C16.2853 27.7844 16.3333 27.6692 16.3333 27.5491V26.1333H17.7333C17.9907 26.1325 18.1992 25.9241 18.1999 25.6666V24.2666H19.1333V25.6666C19.1341 25.9241 19.3425 26.1326 19.5999 26.1333H21.4666V27.5333C21.4674 27.7907 21.6758 27.9992 21.9332 27.9999H25.6666C25.924 27.9992 26.1325 27.7907 26.1332 27.5333V26.1333H27.5332C27.7907 26.1325 27.9992 25.9241 27.9999 25.6666V10.2666C27.9992 10.0092 27.7907 9.80077 27.5333 9.8ZM13.5333 13.5334H12.5999V15.8773C12.6007 15.9981 12.5532 16.1141 12.4681 16.1997C12.3829 16.2853 12.2672 16.3334 12.1464 16.3333H8.38682C8.26607 16.3334 8.1503 16.2853 8.06515 16.1997C7.98 16.1141 7.93253 15.998 7.9333 15.8773V13.5334H6.99995V8.8667H8.39995C8.65736 8.86594 8.86588 8.65747 8.86659 8.40005V7H11.6666V8.41925C11.6666 8.53852 11.7143 8.65282 11.7989 8.73682C11.8836 8.82082 11.9983 8.86758 12.1175 8.8667H13.5333V13.5334ZM25.1999 13.5334H24.2666V15.8667C24.2666 16.1244 24.0577 16.3334 23.7999 16.3334H20.0539C19.9331 16.3335 19.8172 16.2854 19.732 16.1998C19.6468 16.1142 19.5992 15.9981 19.5999 15.8773V13.5334H18.1999V8.8667H20.0666C20.324 8.86594 20.5325 8.65747 20.5332 8.40005V7H23.3332V8.4C23.334 8.65741 23.5425 8.86594 23.7999 8.86665H25.1999L25.1999 13.5334Z"
+                                        fill="#EBE2D0"></path>
+                                    <path class="svg-active" d="M23.3312 12.6001H20.5312V15.4001H23.3312V12.6001Z"
+                                        fill="#EBE2D0"></path>
+                                    <path class="svg-active" d="M11.6672 12.6001H8.86719V15.4001H11.6672V12.6001Z"
+                                        fill="#EBE2D0"></path>
+                                </g>
+                                <defs>
+                                    <clipPath id="clip0_905_28920">
+                                        <rect width="28" height="28" fill="white"></rect>
+                                    </clipPath>
+                                </defs>
+                            </svg>
+                        </a>
                     </div>
 
-                    <a href="#" class="new-header__notification new-btn">
-                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g clip-path="url(#clip0_457_14584)">
-                                <path
-                                    d="M7.99751 16C8.38328 16 8.75325 15.8467 9.02603 15.5739C9.29881 15.3011 9.45206 14.9312 9.45206 14.5454H6.54297C6.54297 14.9312 6.69622 15.3011 6.96899 15.5739C7.24177 15.8467 7.61174 16 7.99751 16Z"
-                                    fill="#EBE2D0" />
-                                <path
-                                    d="M14.4886 12.6422C14.5436 12.5092 14.558 12.363 14.5299 12.2219C14.5019 12.0808 14.4325 11.9511 14.3308 11.8494L13.0893 10.608V6.54545C13.0879 5.32229 12.6461 4.14053 11.8448 3.21638C11.0435 2.29223 9.9363 1.68746 8.72569 1.51273V0.727272C8.72569 0.534387 8.64907 0.349403 8.51268 0.213013C8.37629 0.076623 8.1913 0 7.99842 0C7.80553 0 7.62055 0.076623 7.48416 0.213013C7.34777 0.349403 7.27114 0.534387 7.27114 0.727272V1.51273C6.06053 1.68746 4.9533 2.29223 4.15201 3.21638C3.35072 4.14053 2.90895 5.32229 2.90751 6.54545V10.608L1.66606 11.8494C1.56438 11.9511 1.49514 12.0807 1.46709 12.2218C1.43904 12.3628 1.45344 12.509 1.50848 12.6419C1.56351 12.7748 1.6567 12.8884 1.77627 12.9683C1.89584 13.0482 2.03642 13.0909 2.18024 13.0909H13.8166C13.9604 13.0909 14.101 13.0483 14.2206 12.9684C14.3403 12.8886 14.4335 12.775 14.4886 12.6422ZM3.93588 11.6363L4.14897 11.4233C4.28537 11.2869 4.36202 11.1019 4.36206 10.9091V6.54545C4.36206 5.58102 4.74517 4.6561 5.42712 3.97415C6.10907 3.2922 7.03399 2.90909 7.99842 2.90909C8.96284 2.90909 9.88776 3.2922 10.5697 3.97415C11.2517 4.6561 11.6348 5.58102 11.6348 6.54545V10.9091C11.6348 11.1019 11.7115 11.2869 11.8479 11.4233L12.061 11.6363H3.93588Z"
-                                    fill="#EBE2D0" />
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_457_14584">
-                                    <rect width="16" height="16" fill="white" />
-                                </clipPath>
-                            </defs>
-                        </svg>
 
-                    </a>
-
-                    <a href="#" class="new-header__basket new-btn">
-                        <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g clip-path="url(#clip0_457_14577)">
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M7.99015 -0.09375C6.37708 -0.09375 5.06941 1.21391 5.06941 2.82698V3.41113H3.77851C2.88556 3.41113 2.13539 4.08255 2.03678 4.97005L1.12811 13.1481C1.01277 14.1862 1.82536 15.0941 2.86984 15.0941H9.74259C10.0652 15.0941 10.3267 14.8325 10.3267 14.5099C10.3267 14.1873 10.0652 13.9258 9.74259 13.9258H2.86984C2.52168 13.9258 2.25081 13.6231 2.28926 13.2771L3.19793 5.09908C3.2308 4.80321 3.48085 4.57943 3.77851 4.57943H5.06941V5.74772C5.06941 6.07034 5.33094 6.33187 5.65356 6.33187C5.97618 6.33187 6.23771 6.07034 6.23771 5.74772V4.57943H9.74259V5.74772C9.74259 6.07034 10.0041 6.33187 10.3267 6.33187C10.6494 6.33187 10.9109 6.07034 10.9109 5.74772V4.57943H12.2018C12.4995 4.57943 12.7495 4.80321 12.7824 5.09908L13.251 9.31709C13.2867 9.63773 13.5755 9.86882 13.8962 9.83319C14.2168 9.79755 14.4478 9.50875 14.4122 9.18811L13.9435 4.97005C13.8449 4.08256 13.0948 3.41113 12.2018 3.41113H10.9109V2.82698C10.9109 1.21391 9.60321 -0.09375 7.99015 -0.09375ZM9.74259 3.41113V2.82698C9.74259 1.85914 8.95802 1.07454 7.99015 1.07454C7.02233 1.07454 6.23771 1.85914 6.23771 2.82698V3.41113H9.74259Z"
-                                    fill="#EBE2D0" />
-                                <path fill-rule="evenodd" clip-rule="evenodd"
-                                    d="M13.2489 11.005C13.2489 10.6824 12.9873 10.4209 12.6647 10.4209C12.3421 10.4209 12.0806 10.6824 12.0806 11.005V12.1733H10.9123C10.5896 12.1733 10.3281 12.4349 10.3281 12.7575C10.3281 13.0801 10.5896 13.3416 10.9123 13.3416H12.0806V14.5099C12.0806 14.8326 12.3421 15.0941 12.6647 15.0941C12.9873 15.0941 13.2489 14.8326 13.2489 14.5099V13.3416H14.4172C14.7398 13.3416 15.0013 13.0801 15.0013 12.7575C15.0013 12.4349 14.7398 12.1733 14.4172 12.1733H13.2489V11.005Z"
-                                    fill="#EBE2D0" />
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_457_14577">
-                                    <rect width="16" height="16" fill="white" />
-                                </clipPath>
-                            </defs>
-                        </svg>
-                    </a>
-
-                    <a href="#" class="new-header__admin new-btn">
-                        <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <g clip-path="url(#clip0_905_28920)">
-                                <path
-                                    d="M27.5333 9.8H26.1333V6.53335C26.1325 6.27594 25.9241 6.06741 25.6667 6.0667H24.2666V4.2C24.2666 3.94226 24.0577 3.73335 23.8 3.73335H22.4V2.33335C22.3992 2.07594 22.1908 1.86741 21.9334 1.8667H20.0667V0.466703C20.0659 0.209234 19.8574 0.000765625 19.5999 0H7.9333C7.67588 0.000765625 7.46736 0.209234 7.46665 0.466648V1.86665H6.06665C5.80923 1.86741 5.60071 2.07588 5.6 2.3333V3.7333H4.19995C3.9422 3.7333 3.7333 3.9422 3.7333 4.19995V5.59995H2.3333C2.07588 5.60071 1.86736 5.80918 1.86665 6.06659V9.8H0.466648C0.209234 9.80077 0.000710938 10.0092 0 10.2666V25.6666C0.000765625 25.9241 0.209234 26.1326 0.466648 26.1333H1.86665V27.5333C1.86741 27.7907 2.07588 27.9992 2.3333 27.9999H6.06665C6.32406 27.9992 6.53259 27.7907 6.5333 27.5333V26.1333H8.39995C8.65736 26.1325 8.86588 25.9241 8.86659 25.6666V24.2666H9.79995V25.6666C9.80071 25.9241 10.0092 26.1326 10.2666 26.1333H11.6666V27.5491C11.6666 27.6692 11.7145 27.7844 11.7998 27.869C11.885 27.9537 12.0005 28.0008 12.1206 28H15.8793C15.9994 28.0008 16.1149 27.9537 16.2001 27.869C16.2853 27.7844 16.3333 27.6692 16.3333 27.5491V26.1333H17.7333C17.9907 26.1325 18.1992 25.9241 18.1999 25.6666V24.2666H19.1333V25.6666C19.1341 25.9241 19.3425 26.1326 19.5999 26.1333H21.4666V27.5333C21.4674 27.7907 21.6758 27.9992 21.9332 27.9999H25.6666C25.924 27.9992 26.1325 27.7907 26.1332 27.5333V26.1333H27.5332C27.7907 26.1325 27.9992 25.9241 27.9999 25.6666V10.2666C27.9992 10.0092 27.7907 9.80077 27.5333 9.8ZM13.5333 13.5334H12.5999V15.8773C12.6007 15.9981 12.5532 16.1141 12.4681 16.1997C12.3829 16.2853 12.2672 16.3334 12.1464 16.3333H8.38682C8.26607 16.3334 8.1503 16.2853 8.06515 16.1997C7.98 16.1141 7.93253 15.998 7.9333 15.8773V13.5334H6.99995V8.8667H8.39995C8.65736 8.86594 8.86588 8.65747 8.86659 8.40005V7H11.6666V8.41925C11.6666 8.53852 11.7143 8.65282 11.7989 8.73682C11.8836 8.82082 11.9983 8.86758 12.1175 8.8667H13.5333V13.5334ZM25.1999 13.5334H24.2666V15.8667C24.2666 16.1244 24.0577 16.3334 23.7999 16.3334H20.0539C19.9331 16.3335 19.8172 16.2854 19.732 16.1998C19.6468 16.1142 19.5992 15.9981 19.5999 15.8773V13.5334H18.1999V8.8667H20.0666C20.324 8.86594 20.5325 8.65747 20.5332 8.40005V7H23.3332V8.4C23.334 8.65741 23.5425 8.86594 23.7999 8.86665H25.1999L25.1999 13.5334Z"
-                                    fill="#EBE2D0"></path>
-                                <path class="svg-active" d="M23.3312 12.6001H20.5312V15.4001H23.3312V12.6001Z"
-                                    fill="#EBE2D0"></path>
-                                <path class="svg-active" d="M11.6672 12.6001H8.86719V15.4001H11.6672V12.6001Z"
-                                    fill="#EBE2D0"></path>
-                            </g>
-                            <defs>
-                                <clipPath id="clip0_905_28920">
-                                    <rect width="28" height="28" fill="white"></rect>
-                                </clipPath>
-                            </defs>
-                        </svg>
-                    </a>
                 </div>
             </div>
         </div>
