--- a/src/assets/scss/sections/_new-footer.scss
+++ b/src/assets/scss/sections/_new-footer.scss
@@ -42,6 +42,10 @@
     margin-top: 80px;
     margin-bottom: 40px;
     gap: 60px;
+
+    @include mobile {
+      flex-direction: column;
+    }
   }
 
   &__menu {
