--- a/src/assets/scss/partials/_new-advantages.scss
+++ b/src/assets/scss/partials/_new-advantages.scss
@@ -2,11 +2,17 @@
   padding: 0;
   margin-top: 20px;
   margin-bottom: 20px;
+
+  @include mobile {
+    display: none;
+  }
+
   &__block {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     gap: 8px;
+    padding: 0 20px;
   }
 
   &__card {
@@ -72,35 +78,35 @@
     }
 
     &--contact {
-      max-width: 421px;
+      max-width: 415px;
     }
 
     &--discount {
-      max-width: 314px;
+      max-width: 305px;
     }
 
     &--ship {
-      max-width: 314px;
+      max-width: 305px;
     }
 
     &--work {
-      max-width: 207px;
+      max-width: 200px;
     }
 
     &--price {
-      max-width: 207px;
+      max-width: 200px;
     }
 
     &--payment {
-      max-width: 314px;
+      max-width: 305px;
     }
 
     &--selected {
-      max-width: 314px;
+      max-width: 305px;
     }
 
     &--partner {
-      max-width: 421px;
+      max-width: 415px;
       background: #ff6c3d;
       color: #161513;
       font-weight: 700;
