--- a/src/assets/scss/partials/_new-catalog.scss
+++ b/src/assets/scss/partials/_new-catalog.scss
@@ -1,15 +1,15 @@
 .new-catalog,
 .new-mobile {
-  background-color: #191816;
-  border-radius: 24px;
-  margin-top: 30px;
-  margin-bottom: 20px;
-
   &__block {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 20px;
+    background-color: #191816;
+    border-radius: 24px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+
+    @include mobile {
+      border-radius: 12px;
+    }
   }
 
   &__header {
@@ -69,6 +69,10 @@
     position: relative;
     left: -20px;
 
+    @include mobile {
+      padding: 0 20px !important;
+    }
+
     &-slide {
       width: auto;
       display: flex;
@@ -78,7 +82,7 @@
 
 .new-catalog {
   &__block {
-    padding: 15px 10px;
+    padding: 15px;
     overflow: hidden;
   }
 
