--- a/src/assets/scss/partials/index/_new-steam.scss
+++ b/src/assets/scss/partials/index/_new-steam.scss
@@ -7,8 +7,8 @@
     padding: 8px;
     background-color: #191816;
     border-radius: 24px;
-    margin-bottom: 15px;
-    margin-top: 30px;
+    margin-bottom: 10px;
+    margin-top: 60px;
 
     @include mobile {
       display: flex;
@@ -59,10 +59,9 @@
       background: #2c2b27;
     }
 
-    &_heading {
-    }
-    &_img {
-    }
+    &_heading {}
+
+    &_img {}
 
     &_icon {
       height: 34px;
@@ -95,24 +94,20 @@
     &--discount {
       text-align: center;
       background: rgb(67, 53, 47);
-      background: linear-gradient(
-        45deg,
-        rgba(67, 53, 47, 1) 0%,
-        rgba(49, 45, 42, 1) 20%,
-        rgba(49, 45, 42, 1) 80%,
-        rgba(67, 53, 47, 1) 100%
-      );
+      background: linear-gradient(45deg,
+          rgba(67, 53, 47, 1) 0%,
+          rgba(49, 45, 42, 1) 20%,
+          rgba(49, 45, 42, 1) 80%,
+          rgba(67, 53, 47, 1) 100%);
       transition: 300ms ease;
 
       &:hover {
         background: rgb(54, 38, 30);
-        background: linear-gradient(
-          45deg,
-          rgba(54, 38, 30, 1) 0%,
-          rgba(32, 26, 22, 1) 20%,
-          rgba(32, 26, 22, 1) 80%,
-          rgba(54, 38, 30, 1) 100%
-        );
+        background: linear-gradient(45deg,
+            rgba(54, 38, 30, 1) 0%,
+            rgba(32, 26, 22, 1) 20%,
+            rgba(32, 26, 22, 1) 80%,
+            rgba(54, 38, 30, 1) 100%);
       }
     }
 
@@ -127,8 +122,7 @@
     }
   }
 
-  &__block {
-  }
+  &__block {}
 
   &__arrows {
     display: none;
@@ -145,8 +139,8 @@
     padding: 25px;
     background-color: #191816;
     border-radius: 24px;
-    margin-bottom: 40px;
-    margin-top: 15px;
+    margin-bottom: 60px;
+    margin-top: 10px;
     overflow: hidden;
 
     @include mobile {
@@ -154,11 +148,13 @@
       border-radius: 15px;
     }
   }
+
   &__header {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
+
   &__item {
     width: 100%;
     max-width: 170px;
@@ -169,6 +165,7 @@
       object-fit: contain;
     }
   }
+
   &__content {
     margin-top: 30px;
 
