--- a/src/assets/scss/sections/_new-footer.scss
+++ b/src/assets/scss/sections/_new-footer.scss
@@ -4,38 +4,7 @@
   padding-bottom: 40px;
   position: relative;
 
-  &__left-shape {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: calc(50% - 500px);
-    min-width: auto;
-    height: 15px;
-    background: linear-gradient(
-      90deg,
-      rgba(135, 61, 37, 0.35) -0.17%,
-      rgba(255, 108, 61, 0.35) 48.02%
-    );
-    clip-path: polygon(0 0, 100% 0, 0 100%, 0% 100%);
-  }
-
-  &__right-shape {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: calc(50% - 500px);
-    min-width: auto;
-    height: 15px;
-    background: linear-gradient(
-      90deg,
-      rgba(135, 61, 37, 0.35) -0.17%,
-      rgba(255, 108, 61, 0.35) 48.02%
-    );
-    clip-path: polygon(100% 0, 100% 100%, 0 0, 0 0);
-  }
-
-  &__block {
-  }
+  &__block {}
 
   &__content {
     display: flex;
@@ -53,6 +22,7 @@
     display: flex;
     flex-direction: column;
     max-width: 205px;
+
     &_title {
       color: #fff;
       font-size: 20px;
@@ -79,19 +49,23 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
+
     &_card {
       border-radius: 24px;
       background: #191816;
       padding: 34px;
     }
+
     &_link {
       font-size: 24px;
       color: white;
       font-weight: 600;
+
       &:hover {
         color: #ff6c3d;
       }
     }
+
     &_title {
       color: #c3b8a2;
       font-size: 19px;
@@ -108,17 +82,21 @@
     display: flex;
     align-items: center;
     gap: 12px;
+
     @include mobile {
       display: none;
     }
+
     &_img {
       height: 43px;
       width: auto;
     }
+
     &_title {
       font-size: 40px;
       font-weight: 600;
       color: #ff6c3d;
+
       &--active {
         color: white;
       }
@@ -151,6 +129,63 @@
   background: #22211e;
   padding-top: 30px;
   padding-bottom: 30px;
+  position: relative;
+
+  &__left-shape {
+    position: absolute;
+    z-index: 1;
+    bottom: -15px;
+    left: 0;
+    width: calc(50% - 500px);
+    min-width: auto;
+    height: 15px;
+    background: linear-gradient(90deg,
+        rgba(135, 61, 37, 0.35) -0.17%,
+        rgba(255, 108, 61, 0.35) 48.02%);
+    clip-path: polygon(0 0, 100% 0, 0 100%, 0% 100%);
+  }
+
+  &__right-shape {
+    position: absolute;
+    z-index: 1;
+    bottom: -15px;
+    right: 0;
+    width: calc(50% - 500px);
+    min-width: auto;
+    height: 15px;
+    background: linear-gradient(90deg,
+        rgba(135, 61, 37, 0.35) -0.17%,
+        rgba(255, 108, 61, 0.35) 48.02%);
+    clip-path: polygon(100% 0, 100% 100%, 0 0, 0 0);
+  }
+
+  &__left-t-shape {
+    position: absolute;
+    z-index: 3;
+    top: -15px;
+    left: 0;
+    width: calc(50% - 500px);
+    min-width: auto;
+    height: 15px;
+    background: linear-gradient(90deg,
+        rgba(135, 61, 37, 0.35) -0.17%,
+        rgba(255, 108, 61, 0.35) 48.02%);
+    clip-path: polygon(0 0, 0% 100%, 100% 100%);
+  }
+
+  &__right-t-shape {
+    position: absolute;
+    z-index: 3;
+    top: -15px;
+    right: 0;
+    width: calc(50% - 500px);
+    min-width: auto;
+    height: 15px;
+    background: linear-gradient(90deg,
+        rgba(135, 61, 37, 0.35) -0.17%,
+        rgba(255, 108, 61, 0.35) 48.02%);
+    clip-path: polygon(100% 0, 0% 100%, 100% 100%);
+  }
 
   &__block {
     display: flex;
@@ -174,16 +209,19 @@
       flex-direction: column;
       color: #c3b8a2;
     }
+
     &_icon {
       width: auto;
       height: 83px;
       object-fit: contain;
     }
+
     &_title {
       font-size: 28px;
       line-height: 1.2;
       font-weight: 500;
     }
+
     &_text {
       font-size: 19px;
       font-weight: 300;
@@ -258,4 +296,35 @@
       }
     }
   }
+}
+
+.footer-to-top {
+  background-color: $dark;
+  width: 52px;
+  height: 52px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  transition: 300ms ease;
+  z-index: 5;
+
+  @include netbook {
+    right: 20px;
+  }
+
+  svg {
+    position: relative;
+    bottom: -5px;
+    transition: 200ms ease;
+
+    &:hover {
+      bottom: 0;
+
+      .footer-to-top__bg {
+        fill: $orange;
+      }
+    }
+  }
+
 }
