--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -17,6 +17,7 @@
 @import "common/cards";
 @import "common/form";
 @import "common/sliders";
+@import "common/checkbox";
 @import "template";
 @import "classes";
 /* Sections for all pages */
