--- a/src/assets/scss/partials/catalog/_catalog.scss
+++ b/src/assets/scss/partials/catalog/_catalog.scss
@@ -336,6 +336,38 @@
 
     &__card {
         padding: 15px 20px;
+
+        &_content {
+            margin-top: 16px;
+            display: none;
+            flex-direction: column;
+            gap: 8px;
+
+            &.active {
+                display: flex;
+            }
+        }
+
+        &_more {
+            color: #7C8088;
+            border: 1px solid #37332A;
+            border-radius: 5px;
+            background-color: transparent;
+            padding: 8px 10px;
+            text-align: center;
+            width: 100%;
+            font-size: 12px;
+            text-transform: uppercase;
+            margin-top: 10px;
+
+            &:hover {
+                background-color: #353330;
+                color: #EBE2D0;
+            }
+            &:focus {
+                border: 1px solid #37332A;
+            }
+        }
     }
 
     &__heading {
@@ -361,7 +393,7 @@
         padding: 15px 20px;
     }
 
-    &__title{
+    &__title {
         font-size: 14px;
         font-weight: 600;
         display: flex;
@@ -369,5 +401,24 @@
         justify-content: space-between;
         color: #EBE2D0;
         width: 100%;
+        padding: 0;
+
+        &_icon {
+            &::after {
+                content: "+";
+                line-height: 1;
+                color: #83878F;
+                font-size: 20px;
+                font-weight: 600;
+            }
+        }
+
+        &.active &_icon {
+            &::after {
+                content: "-";
+            }
+        }
+
     }
+
 }
